# IdleBrain

./: .gitignore  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: api_reference.md  science_methods.md  user_guide.md
project/: README.md  version.json
project/configs/: run_config.schema.json  run_config.template.json  run_config_35.json
project/docs/: README.en.md  README.zh-CN.md
project/frontend/: README.md  TRIAL_BUILD_NOTES.md  api_errors.py  app.js  build_desktop.bat  index.html  requirements-desktop-build.txt  server.py  server_context.py  styles.css
project/frontend/blueprints/: api_alignment.py  api_atlas.py  api_batch.py  api_browse.py  api_compare.py  api_demo.py  api_docs.py  api_outputs.py  api_overlay.py  api_pipeline.py  api_projects.py  api_training.py
project/frontend/services/: __init__.py  alignment_service.py  demo_service.py  (+1 more)
project/scripts/: ai_landmark.py  align_ai.py  align_nonlinear.py  allen_colors.py  atlas_autopick.py  atlas_deepslice.py  atlas_mapper.py  atlas_shape_match.py  benchmark_sample_registration.py  build_registration_report.py  build_version_json.py  check_env.py  compare_render.py  config_validation.py  dedup.py  detect.py  exceptions.py  extract_zstack.py  image_utils.py  laplacian_refine.py  learn_from_trainset.py  logging_setup.py  main.py  make_demo_panel.py  make_registration_overview.py  map_and_aggregate.py  overlay_assets.py  overlay_postprocess.py  overlay_render.py  paths.py  preprocess.py  qc.py  refresh_demo.py  registration_adapter.py  run_3d_registration.py  run_overlay_test.py  slice_select.py  staining_stats.py  structure_tree.py  test_single_slice.py
project/tests/: test_regression_suite.py
(+6 files in other folders)
